fdo#53640: Correctly cache source data coming from database backend.

It was due to a simple misplacement of nRow = 0.  Each record was
labeled row 0.  No wonder it screws up the result badly.

Change-Id: Ia94f42a62f98a9bd7c9d34df3606351bb487931b